syntax = "proto3";

service UserService{
    rpc addUser(User) returns (User){}
    rpc getUsers(Empty) returns (UserList){}
    rpc UpdateName(User) returns (User){}
}

message Empty{}

message User{
    string name=1;
    string email=2;
    int32 age=3;
}

message UserList{
    repeated User user=1;
}